styles.css
/* ... */
.large {
    height: 40px;
    padding: 8px 16px;
}

.medium {
    height: 32px;
    padding: 6px 12px;
}

#open-modal {
    position: absolute;
    bottom: 32px;
    left: 32px;
}

.search-40 {
    padding: 8px 16px;

    background: #f4f4f4;
    border-radius: 8px;
    border: none;

    height: 24px;

    flex-grow: 1;

    font: inherit;
    font-size: 16px;
}

.header-bottom-right {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 16px;

    width: 268px;
}

.slider-container {
    width: 100%;
    height: 340px;

    padding-top: 24px;
}

.slider#slider1 {
    display: flex;
    gap: 16px;

    width: 100%;
    height: 100%;
    border-radius: 24px;

    overflow: auto hidden;
    white-space: nowrap;

    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;

    -ms-overflow-style: none;
    scrollbar-width: none;
}

.slider::-webkit-scrollbar {
    display: none;
}

.slide {
    max-width: 1300px;
    width: calc(1285 * 100vw / 1344);
    height: 340px;
    scroll-snap-align: center;
    flex-shrink: 0;
    position: relative;
}

.slide > .slide-background {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    position: absolute;
}

.avatar {
    position: absolute;
    width: 234px;
    right: 46px;
}

.message {
    position: absolute;
    top: 16px;
    right: 184px;

    box-sizing: border-box;
    width: 185px;
    height: 86px;

    border-radius: 16px 16px 0 16px;

    padding: 7px 14px;

    background-color: #f4f4f4;
    white-space: normal;
    font-size: 14.5px;
}

.message > text {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
}

.pagination-slider {
    display: flex;
    justify-content: center;
    gap: 4px;
    z-index: 1;
    align-items: center;
    height: 12px;
}

.slider-container > .pagination-slider {
    position: relative;
    bottom: 20px;
    left: 0;
    right: 0;
}

.pagination-point {
    width: 8px;
    height: 8px;
    border-radius: 4px;

    cursor: pointer;

    transition: all 0.3s ease;
    flex-shrink: 0;
}

.slider-container * .pagination-point {
    background: #ffffff99;
}

.slider-container * .pagination-point.active {
    width: 16px;
    background-color: #ffffff;
}

.popular-container > .pagination-slider {
    padding-top: 8px;
}

.popular-container * .pagination-point {
    background: #1c1c1c1f;
}

.popular-container * .pagination-point.active {
    width: 16px;
    background-color: #a4a4a5;
}

.popular-container {
    padding-top: 48px;
    gap: 16px;
    height: 492px;
}

.slider#slider2 {
    display: flex;
    gap: 8px;

    width: 100%;

    padding-top: 16px;

    overflow: auto hidden;
    white-space: nowrap;

    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;

    -ms-overflow-style: none;
    scrollbar-width: none;
}

.card-product {
    box-sizing: border-box;

    display: flex;
    flex-direction: column;
    padding: 12px;
    gap: 8px;

    width: 280px;
    height: 416px;

    background: #ffffff;
    border: 1px solid #ededed;
    border-radius: 16px;
}

.card-preview-slider {
    align-items: center;
    width: 256px;
    height: 256px;
}

.card-preview-slider > img {
    width: 256px;
    height: 256px;
    border-radius: 8px;
}

.card-info {
    display: flex;
    flex-direction: column;

    width: 256px;
    height: 80px;
}

.card-title {
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0;

    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.card-name {
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    color: #777778;
}

.card-price {
    display: flex;
    justify-content: space-between;
}

.price {
    font-size: 24px;
    line-height: 32px;
    font-weight: 500;
    letter-spacing: 0;
    height: 16px;
}

.rating-wrap {
    display: flex;
    flex-direction: column;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: 0;
}

.rating {
    display: flex;
    align-items: center;
    justify-content: end;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    letter-spacing: 0;
    justify-content: end;
    gap: 4px;
}

.card-button-wrap {
    display: flex;
    justify-content: space-between;
    width: 256px;
    gap: 8px;
}

.select-large {
    display: flex;
    align-items: center;
    padding-left: 16px;

    height: 40px;

    min-width: 100px;

    background: #f4f4f4;
    border: #f4f4f4;
    border-radius: 8px;

    flex-grow: 1;

    font: inherit;

    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: url("icons/fill/16/chevron-down.svg");
    background-repeat: no-repeat;
    background-position: right 10px center; /* Позиция иконки */
}

.select-large > option {
    font: inherit;
}

.title {
    color: white;
    position: absolute;
    top: 32px;
    left: 32px;
    max-width: 510px;
    white-space: normal;
}

.button-floating {
    width: 96px;
    height: 96px;

    background-color: white;
    border: 1px solid #e4e4e4;
    border-radius: 48px;

    position: fixed;
    left: 32px;
    bottom: 32px;

    transition: opacity 0.3s;
    cursor: pointer;

    padding: 0;
    margin: 0;
}

.button-floating > img {
    width: 100%;
    height: 100%;
    border-radius: 48px;
}

.button-floating.hidden {
    opacity: 0;
    pointer-events: none;
}

.modal {
    box-sizing: border-box;
    display: none;
    position: fixed;
    padding-bottom: 24px;
    top: 0;
    left: 0;
    background-color: white;
    width: 100vw;
    height: 100vh;

    z-index: 2;
}

.modal-main {
    box-sizing: border-box;
    height: calc(100% - 56px);
    padding-bottom: 24px;
}

.modal-header {
    box-sizing: border-box;
    padding: 16px 24px 0 24px;
    height: 56px;

    display: flex;
    justify-content: space-between;

    position: sticky;
}
/* ... */

